# Mashtasic-C

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmake/: FindNanopb.cmake
include/: serial_interface.h
src/: main.cpp  serial_interface.c  serial_interface.cpp
